--- a/QuanLyKhachSan/QuanLyKhachSan/Web.config
+++ b/QuanLyKhachSan/QuanLyKhachSan/Web.config
@@ -50,6 +50,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ModelQLKS" connectionString="data source=DESKTOP-8JPNURT;initial catalog=QLKS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="ModelQLKS" connectionString="data source=DESKTOP-TOPTJLQ;initial catalog=QLKS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
