--- a/QuanLyKhachSan/QuanLyKhachSan/QuanLyKhachSan.csproj
+++ b/QuanLyKhachSan/QuanLyKhachSan/QuanLyKhachSan.csproj
@@ -757,6 +757,9 @@
   <ItemGroup>
     <Content Include="Views\Admin\KeHoachPhong.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Admin\ThanhToan.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
